[package]
name = "rust-tm-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
rapidfuzz = "0.5.0"
aho-corasick = "1.1.4"
